Bug 498779 - Mouse Click Animation desktop effect doesn't work on X11
Summary: Mouse Click Animation desktop effect doesn't work on X11
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.2.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 495868 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-01-17 06:47 UTC by ratijas
Modified: 2025-02-27 10:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2025-01-17 06:47:40 UTC
SUMMARY

It won't work anymore for clicks, still works for press-drag-release though. X11.

STEPS TO REPRODUCE
1. Enable the effect.
2. Press the associated toggle shortcut if needed, because apparently just enabling an effect is not enough and an invisible shortcut is the only UI around.
3. Perform clicks and drag stuff around.

OBSERVED RESULT
Clicks won't spawn any animated circles. But for drags it still works both on press and release.

EXPECTED RESULT
Clicks should spawn the circles.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.12.8-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 9 7940HS w/ Radeon 780M Graphics
Memory: 60.6 GiB of RAM
Graphics Processor: AMD Radeon 780M

ADDITIONAL INFORMATION
Also, the default colors suck.
Comment 1 Bug Janitor Service 2025-01-17 07:33:36 UTC Comment hidden (spam)
Comment 2 ratijas 2025-01-17 07:36:09 UTC Comment hidden (spam)
Comment 3 Nate Graham 2025-01-17 15:52:07 UTC
Works for me on Wayland; can confirm it's broken in the way you describe on X11.
Comment 4 Bug Janitor Service 2025-02-04 12:08:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7105
Comment 5 Vlad Zahorodnii 2025-02-04 13:35:52 UTC
Git commit 86209dd69a6d5c661fdbb783d8ed66aa8d3913ab by Vlad Zahorodnii.
Committed on 04/02/2025 at 12:08.
Pushed by vladz into branch 'master'.

backends/x11: Poll button events

Amends 26b15feb61b9ff7f50e1809b4d54635dd1ec1d01.

M  +4    -0    src/backends/x11/standalone/x11_standalone_xinputintegration.cpp

https://invent.kde.org/plasma/kwin/-/commit/86209dd69a6d5c661fdbb783d8ed66aa8d3913ab
Comment 6 Vlad Zahorodnii 2025-02-04 13:58:00 UTC
Git commit 9e73009408937a3cb2cd3b16d6f03322b4e8fdfc by Vlad Zahorodnii.
Committed on 04/02/2025 at 13:36.
Pushed by vladz into branch 'Plasma/6.3'.

backends/x11: Poll button events

Amends 26b15feb61b9ff7f50e1809b4d54635dd1ec1d01.


(cherry picked from commit 86209dd69a6d5c661fdbb783d8ed66aa8d3913ab)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +4    -0    src/backends/x11/standalone/x11_standalone_xinputintegration.cpp

https://invent.kde.org/plasma/kwin/-/commit/9e73009408937a3cb2cd3b16d6f03322b4e8fdfc
Comment 7 Vlad Zahorodnii 2025-02-27 10:48:38 UTC
*** Bug 495868 has been marked as a duplicate of this bug. ***