backends/x11: Poll button events

Amends 26b15feb61b9ff7f50e1809b4d54635dd1ec1d01.

BUG: 498779


(cherry picked from commit 86209dd69a6d5c661fdbb783d8ed66aa8d3913ab)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>